CAY-1686 StringIdQuery - a query providing an optimized fetch for objects based on 1..N String IDs. 
CAY-1688 [PATCH] rename DataDomain.getNode to getDataNode
CAY-1693 Initial support for bitwise operators in Expression and SelectQuery - MySQL
CAY-1698 ObjectIdRelationship support for AuditableChild
CAY-1700 Split long DISJOINT_BY_ID prefetch query on several smaller queries

Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1623 [PATCH] PersistentObjectList.setValue does not work
CAY-1624 [PATCH] PersistentObjectHolder throws NPE is object is transient - not in an ObjectContext
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship
CAY-1631 Oracle - passing blobs as stored procedure parameters
CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed
CAY-1648 [PATCH] ValidationException throws format exception if error message contains percent sign
CAY-1696 Undo/Redo stop working after deleting several project items at once
CAY-1697 Error on Save after importing database
CAY-1702 Excessive Selection action is generated when selecting datanode
CAY-1703 NPE on selecting default datasource value

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache