@@ -56,6 +56,7 @@ CAY-1688 [PATCH] rename DataDomain.getNode to getDataNode
 CAY-1693 Initial support for bitwise operators in Expression and SelectQuery - MySQL
 CAY-1698 ObjectIdRelationship support for AuditableChild
 CAY-1700 Split long DISJOINT_BY_ID prefetch query on several smaller queries
+CAY-1705 Cayenne plugin compatibility with M2E
 
 Bug Fixes Since 3.1M3:
 
